--- a/pagina_inicial.html
+++ b/pagina_inicial.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="#">Sobre</a></li>
                 <li><a href="#">Consumo</a></li>
-                <li><a href="#">Artigos e Noticias</a></li>
+                <li><a href="#">Artigos e Notícias</a></li>
                 <li><a href="#">Iniciativas</a></li>
                 <li><a href="#">Galeria</a></li>
                 <li><a href="#">Contato</a></li>
@@ -66,13 +66,16 @@
 
         <section class="artigos">
             <article>
-                <h2>Artigo 1</h2>
-                <p>Conteudo de exemplo sobre sustentabilidade e preservacao.</p>
+                <h2>Relatório Mundial das Nações Unidas sobre o Desenvolvimento da Água 2025</h2>
+            <br>    
+                <p>Montanhas e geleiras - Torres de água
+                Para bilhões de pessoas, a água do degelo das montanhas é essencial para o abastecimento de água potável e saneamento, segurança alimentar e energética, e para a integridade do meio ambiente.</p>
             </article>
 
             <article>
-                <h2>Artigo 2</h2>
-                <p>Conteudo de exemplo sobre impactos do desperdicio de agua.</p>
+                <h2>Progresso no acesso à água potável, saneamento e higiene domiciliar entre 2000 e 2024: foco especial nas desigualdades.</h2>
+                <br>
+                <p>Entre 2000 e 2024, a população mundial aumentou de 6,2 bilhões para 8,2 bilhões. Nesse período, um quarto da população mundial (2,2 bilhões) obteve acesso à água potável gerenciada de forma segura, e um terço (2,8 bilhões) obteve acesso a saneamento gerenciado de forma segura.</p>
             </article>
         </section>
 
@@ -105,7 +108,7 @@
         <!-- ASIDE COM MIDIAS -->
         <aside>
             <div>
-                <iframe class="mapa" src="https://www.google.com/maps/embed?..." style="border:0;" loading="lazy"></iframe>
+                <iframe class="youtube" src="https://www.youtube.com/embed/Z7SSX-N8RHY?si=5txl6aM6RT2X7wPd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div>
                 <iframe class="youtube" src="https://www.youtube.com/embed/EWqnWXnXURw?si=M6iZtCfhAjchhDS0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
