--- a/pagina_inicial.html
+++ b/pagina_inicial.html
@@ -28,8 +28,8 @@
     <!-- BANNER PRINCIPAL -->
     <section class="destaque">
         <figure>
-            <!-- imagem exemplo -->
-            <img src="Imagens/destaque.jpg" alt="Imagem agua">
+            <!-- imagem -->
+            <img src="Imagens/imagem destaque.png" alt="Imagem agua">
         </figure>
         <p>
             O Dia Mundial da Água, celebrado em 22 de março de cada ano desde 1993, é uma data comemorativa anual das Nações Unidas que destaca a importância da água doce. A data celebra a água e conscientiza sobre os 2,1 bilhões de pessoas que vivem sem acesso à água potável. Trata-se de uma iniciativa para combater a crise global da água. 
@@ -66,14 +66,24 @@
 
         <section class="artigos">
             <article>
-                <h2>Relatório Mundial das Nações Unidas sobre o Desenvolvimento da Água 2025</h2>
+
+            <figure>
+            <img src="Imagens/artigo 1_1.png" alt="capa do artigo">
+            </figure>
+
+                <h3>Relatório Mundial das Nações Unidas sobre o Desenvolvimento da Água 2025</h3>
             <br>    
                 <p>Montanhas e geleiras - Torres de água
                 Para bilhões de pessoas, a água do degelo das montanhas é essencial para o abastecimento de água potável e saneamento, segurança alimentar e energética, e para a integridade do meio ambiente.</p>
             </article>
 
             <article>
-                <h2>Progresso no acesso à água potável, saneamento e higiene domiciliar entre 2000 e 2024: foco especial nas desigualdades.</h2>
+
+            <figure>
+            <img src="Imagens/artigo 2.png" alt="capa do artigo">
+            </figure>
+
+                <h3>Progresso no acesso à água potável, saneamento e higiene domiciliar entre 2000 e 2024: foco especial nas desigualdades.</h3>
                 <br>
                 <p>Entre 2000 e 2024, a população mundial aumentou de 6,2 bilhões para 8,2 bilhões. Nesse período, um quarto da população mundial (2,2 bilhões) obteve acesso à água potável gerenciada de forma segura, e um terço (2,8 bilhões) obteve acesso a saneamento gerenciado de forma segura.</p>
             </article>
@@ -81,13 +91,13 @@
 
         <!-- FORMULARIO DE INSCRICAO -->
         <section class="formulario">
-            <h2>Inscreva-se para receber noticias</h2>
+            <h2>Inscreva-se para receber notícias</h2>
 
             <form>
                 <label>Nome:</label>
                 <input type="text">
 
-                <label>Email:</label>
+                <label>E-mail:</label>
                 <input type="email">
 
                 <label>Cidade:</label>
