--- a/consumo.html
+++ b/consumo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Dia Mundial da Água</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_consumo.css">
 </head>
 <body>
 
@@ -15,9 +15,9 @@
 
         <nav>
             <ul>
-                <li><a href="pagina_inicial.html">Sobre</a></li>
+                <li><a href="pagina_inicial.html">Página Incial</a></li>
                 <li><a href="consumo.html">Consumo</a></li>
-                <li><a href="#">Artigos e Noticias</a></li>
+                <li><a href="artigos_notícias.html">Artigos e Noticias</a></li>
                 <li><a href="#">Iniciativas</a></li>
                 <li><a href="#">Galeria</a></li>
                 <li><a href="#">Contato</a></li>
@@ -29,11 +29,10 @@
     <section class="destaque">
         <figure>
             <!-- imagem exemplo -->
-            <img src="Imagens/destaque.jpg" alt="Imagem agua">
+            <img src="Imagens/imagem destaque.png" alt="Imagem agua">
         </figure>
         <p>
             O Dia Mundial da Água, celebrado em 22 de março de cada ano desde 1993, é uma data comemorativa anual das Nações Unidas que destaca a importância da água doce. A data celebra a água e conscientiza sobre os 2,1 bilhões de pessoas que vivem sem acesso à água potável. Trata-se de uma iniciativa para combater a crise global da água. 
-            
         </p>
     </section>
 
@@ -170,7 +169,7 @@
         <!-- ASIDE COM MIDIAS -->
         <aside>
             <div>
-                <iframe class="mapa" src="https://www.google.com/maps/embed?..." style="border:0;" loading="lazy"></iframe>
+                <iframe class="youtube" src="https://www.youtube.com/embed/Z7SSX-N8RHY?si=5txl6aM6RT2X7wPd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div>
                 <iframe class="youtube" src="https://www.youtube.com/embed/EWqnWXnXURw?si=M6iZtCfhAjchhDS0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
