--- a/pagina_inicial.html
+++ b/pagina_inicial.html
@@ -15,9 +15,9 @@
 
         <nav>
             <ul>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Consumo</a></li>
-                <li><a href="#">Artigos e Notícias</a></li>
+                <li><a href="pagina_inicial.html">Pagina Inicial</a></li>
+                <li><a href="consumo.html">Consumo</a></li>
+                <li><a href="artigos_notícias.html">Artigos e Notícias</a></li>
                 <li><a href="#">Iniciativas</a></li>
                 <li><a href="#">Galeria</a></li>
                 <li><a href="#">Contato</a></li>
@@ -92,7 +92,7 @@
         <!-- FORMULARIO DE INSCRICAO -->
         <section class="formulario">
             <h2>Inscreva-se para receber notícias</h2>
-
+            <!-- revisar formulário, adicionar atributo action adc id adc for e name -->
             <form>
                 <label>Nome:</label>
                 <input type="text">
@@ -121,7 +121,7 @@
                 <iframe class="youtube" src="https://www.youtube.com/embed/Z7SSX-N8RHY?si=5txl6aM6RT2X7wPd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div>
-                <iframe class="youtube" src="https://www.youtube.com/embed/EWqnWXnXURw?si=M6iZtCfhAjchhDS0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
+                <iframe class="youtube" src="https://www.youtube.com/embed/EWqnWXnXURw?si=M6iZtCfhAjchhDS0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </aside>
 
