--- a/pagina_inicial.html
+++ b/pagina_inicial.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <title>Dia Mundial da Água</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        body {
+            background-image: url(Imagens/fundo.jpg);
+            background-size: contain;
+            background-repeat: unset;
+        }
+    </style>
 </head>
 <body>
 
