--- a/artigos_notícias.html
+++ b/artigos_notícias.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="pagina_inicial.html">Pagina Inicial</a></li>
                 <li><a href="consumo.html">Consumo</a></li>
-                <li class="ativo"><a href="artigos_notícias.html">Artigos e Noticias</a></li>
+                <li><a href="artigos_notícias.html">Artigos e Notícias</a></li>
                 <li><a href="#">Iniciativas</a></li>
                 <li><a href="#">Galeria</a></li>
                 <li><a href="#">Contato</a></li>
@@ -27,8 +27,8 @@
 
     <!-- TITULO DA PAGINA -->
     <section class="titulo-pagina">
-        <h2>Artigos e Noticias</h2>
-        <p>Acompanhe estudos, relatorios e informacoes atualizadas sobre preservacao e uso da agua.</p>
+        <h2>Artigos e Notícias</h2>
+        <p>Navegue pelas notícias sobre o Dia Mundial da Água e acompanhe os estudos, relatórios e informações atualizadas sobre preservação e uso da água.</p>
     </section>
 
     <!-- LISTA DE ARTIGOS -->
@@ -39,17 +39,25 @@
             <!-- ARTIGO 01 -->
             <article class="artigo-item">
                 <figure>
-                    <img src="Imagens/artigo1.png" alt="Capa artigo 1">
+                    <img src="Imagens/artigo 1_1.png" alt="Capa artigo 1">
                 </figure>
 
                 <div class="texto-artigo">
-                    <h3>Relatorio Mundial das Nacoes Unidas sobre o Desenvolvimento da Agua 2025</h3>
+                    <h3>Relatório Mundial das Nações Unidas sobre o Desenvolvimento da Água 2025</h3>
+                    <h5>21 de março de 2025</h5>
                     <p>
-                        Montanhas e geleiras sao consideradas torres de agua naturais. Para bilhoes de pessoas,
-                        a agua do degelo e fundamental para o abastecimento potavel, seguranca alimentar,
-                        energia e manutencao dos ecossistemas.
+                        <br>
+                    Montanhas e geleiras - Torres de água
+
+                    Para bilhões de pessoas, a água do degelo das montanhas é essencial para o abastecimento de água potável e saneamento, segurança alimentar e energética, e para a integridade do meio ambiente.
+
+                    Mas hoje, com o aquecimento global, as geleiras estão derretendo mais rápido do que nunca, tornando o ciclo da água mais imprevisível e extremo. E por causa do recuo glacial, inundações, secas, deslizamentos de terra e a elevação do nível do mar estão se intensificando, com consequências devastadoras para as pessoas e a natureza.
+
+                    O Relatório Mundial das Nações Unidas sobre o Desenvolvimento da Água 2025: Montanhas e geleiras - Reservatórios de água oferece soluções para nos ajudar a mitigar e adaptar-nos simultaneamente às rápidas mudanças nos nossos recursos hídricos congelados. Este relatório fornece uma visão geral clara do estado atual da situação e recomenda o que precisa ser mudado. A necessidade urgente de reduzir drasticamente as emissões de carbono é reiterada enfaticamente.
+
+                    Ao detalhar as conexões entre a água doce das montanhas, os serviços essenciais e o mundo natural, esta publicação destaca a importância crucial da conservação da criosfera para a concretização dos Objetivos de Desenvolvimento Sustentável. 
                     </p>
-                    <a class="botao" href="#">Ler mais</a>
+                    <a class="botao" href="https://unesdoc.unesco.org/ark:/48223/pf0000393070"> Baixe o artigo </a>
                 </div>
             </article>
 
