--- a/pagina_inicial.html
+++ b/pagina_inicial.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>Dia Mundial da Água</title>
     <link rel="stylesheet" href="css/style.css">
-    <style>
+    <Style>
         body {
-            background-image: url(Imagens/fundo.jpg);
-            background-size: contain;
-            background-repeat: unset;
+            background-image: url(Imagens/Fundo.png);
+            background-size: 80%;
+            background-repeat: repeat;
         }
     </style>
 </head>
@@ -38,10 +38,7 @@
             <!-- imagem -->
             <img src="Imagens/imagem destaque.png" alt="Imagem agua">
         </figure>
-        <p>
-            O Dia Mundial da Água, celebrado em 22 de março de cada ano desde 1993, é uma data comemorativa anual das Nações Unidas que destaca a importância da água doce. A data celebra a água e conscientiza sobre os 2,1 bilhões de pessoas que vivem sem acesso à água potável. Trata-se de uma iniciativa para combater a crise global da água. 
-            
-        </p>
+        <p> O Dia Mundial da Água, celebrado em 22 de março de cada ano desde 1993, é uma data comemorativa anual das Nações Unidas que destaca a importância da água doce. A data celebra a água e conscientiza sobre os 2,1 bilhões de pessoas que vivem sem acesso à água potável. Trata-se de uma iniciativa para combater a crise global da água.</p>
     </section>
 
     <!-- CONTEUDO PRINCIPAL -->
