--- a/artigos_notícias.html
+++ b/artigos_notícias.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Artigos e Noticias</title>
     <link rel="stylesheet" href="css/style_artigosenoticias.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+
 
     <Style>
         body {
@@ -39,6 +41,47 @@
         <h2>Artigos e Notícias</h2>
         <p>Navegue pelas notícias sobre o Dia Mundial da Água e acompanhe os estudos, relatórios e informações atualizadas sobre preservação e uso da água.</p>
     </section>
+
+    <!--Carrossel-->
+
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="Imagens/eco.jpg" class="d-block w-100" alt="Água">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Conferência das Nações Unidas sobre a Água de 2026</h5>
+        <p>A Conferência das Nações Unidas sobre a Água de 2026 acontecerá de 2 a 4 de dezembro de 2026, nos Emirados Árabes Unidos (EAU).</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="Imagens/Consumo_consciente.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Second slide label</h5>
+        <p>Some representative placeholder content for the second slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="Imagens/ecossistemas.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Some representative placeholder content for the third slide.</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-target="#carouselExampleCaptions" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-target="#carouselExampleCaptions" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </button>
+</div>
 
     <!-- LISTA DE ARTIGOS -->
     <main>
@@ -114,6 +157,10 @@
     </footer>
 
 </div>
+
+<!--Importando bibliotecas Java-->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 
 </body>
 </html>
