--- a/artigos_notícias.html
+++ b/artigos_notícias.html
@@ -39,7 +39,7 @@
     <!-- TITULO DA PAGINA -->
     <section class="titulo-pagina">
         <h2>Artigos e Notícias</h2>
-        <p>Navegue pelas notícias sobre o Dia Mundial da Água e acompanhe os estudos, relatórios e informações atualizadas sobre preservação e uso da água.</p>
+        <p>Neste espaço, reunimos notícias, relatórios e artigos sobre o uso consciente da água, desafios globais e locais de saneamento, preservação de rios e rios, dados atualizados sobre segurança hídrica e iniciativas ambientais. Nossa missão é informar e inspirar ação: porque proteger a água é proteger a vida.</p>
     </section>
 
     <!--Carrossel-->
@@ -52,21 +52,21 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="Imagens/eco.jpg" class="d-block w-100" alt="Água">
+      <img src="Imagens/Notícias_1.jpg" class="d-block w-100" alt="Água">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Conferência das Nações Unidas sobre a Água de 2026</h5>
-        <p>A Conferência das Nações Unidas sobre a Água de 2026 acontecerá de 2 a 4 de dezembro de 2026, nos Emirados Árabes Unidos (EAU).</p>
+        <h5>Exposição “Água”, de Érico Hiller, apresenta um retrato da crise hídrica mundial</h5>
+        <p>As imagens documentam a rotina de comunidades que acordam antes do sol para buscar água</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="Imagens/Consumo_consciente.jpg" class="d-block w-100" alt="...">
+      <img src="Imagens/Notícias_2.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
+        <h5>A startup de ganhador do Prêmio Nobel que transforma ar em água</h5>
+        <p>Filho de refugiados palestinos de Gaza, Omar Yaghi ganhou o Prêmio Nobel de Química em 2025 e pode solucionar a escassez de água no mundo</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="Imagens/ecossistemas.jpg" class="d-block w-100" alt="...">
+      <img src="Imagens/Notícias_3.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
@@ -145,6 +145,34 @@
                 </div>
             </article>
 
+        <!--Notícias-->
+        <section class="noticias-secao">
+            <h2 class="titulo-noticias">Navegando pelas notícias</h2>
+
+            <div class="noticias-grid">
+
+                <article class="noticia-item">
+                    <img src="Imagens/Notícias_1.jpg" alt="Exposição Érico Hiller">
+                    <h4>Exposição “Água”, de Érico Hiller, apresenta um retrato da crise hídrica mundial</h4>
+                    <p>Mostra fotográfica documenta a realidade de comunidades ao redor do planeta que vivem sem acesso à água limpa, em contexto de emergência climática</p>
+                    <a class="botao" href="https://jornaldobras.com.br/noticia/99088/exposicao-agua-de-erico-hiller-apresenta-no-mis-um-retrato-contundente-da-crise-hidrica-mundial-a-partir-de-27-de-novembro" target="_blank">Leia mais</a>
+                </article>
+
+                <article class="noticia-item">
+                    <img src="Imagens/Notícias_2.jpg" alt="Nobel da Água">
+                    <h4>Ganhador do Prêmio Nobel que transforma ar em água</h4>
+                    <p> O professor Omar Yaghi ganhou o Prêmio Nobel de Química de 2025 por uma descoberta científica que sua startup está agora prestes a comercializar. A tecnologia da empresa colhe água da atmosfera</p>
+                    <a class="botao" href="https://www.infomoney.com.br/business/a-startup-de-ganhador-do-premio-nobel-que-transforma-agua-em-ar/" target="_blank">Leia mais</a>
+                </article>
+
+                <article class="noticia-item">
+                    <img src="Imagens/Notícias_3.jpg" alt="Calendário Ecológico">
+                    <h4>Calendário Ambiental Anual</h4>
+                    <p>Com a crescente preocupação em torno das mudanças climáticas e da preservação dos recursos naturais, iniciativas que reforçam a consciência ecológica ganham ainda mais importância. Confira as principais datas de 2026.</p>
+                    <a class="botao" href="https://www2.uepg.br/pauta-ambiental/calendario-ambiental-anual/" target="_blank">Leia mais</a>
+                </article>
+
+            </div>
         </section>
 
     </main>
