Atualização final Fernanda

--- a/pagina_inicial.html
+++ b/pagina_inicial.html
@@ -38,7 +38,7 @@
             <!-- imagem -->
             <img src="Imagens/imagem destaque.png" alt="Imagem agua">
         </figure>
-        <p> O Dia Mundial da Água, celebrado em 22 de março de cada ano desde 1993, é uma data comemorativa anual das Nações Unidas que destaca a importância da água doce. A data celebra a água e conscientiza sobre os 2,1 bilhões de pessoas que vivem sem acesso à água potável. Trata-se de uma iniciativa para combater a crise global da água.</p>
+        <p> O Dia Mundial da Água, celebrado em 22 de março desde 1993, é uma data oficial das Nações Unidas dedicada a destacar a importância vital da água doce para a vida no planeta. Além de celebrar esse recurso essencial, a data chama atenção para os 2,1 bilhões de pessoas que ainda vivem sem acesso à água potável e lembra a urgência de enfrentar a crise global da água. É um momento para refletir, conscientizar e incentivar ações que promovam o uso responsável, a preservação e o acesso universal à água de qualidade.</p>
     </section>
 
     <!-- CONTEUDO PRINCIPAL -->
@@ -72,7 +72,10 @@
             <article>
 
             <figure>
-            <img src="Imagens/artigo 1_1.png" alt="capa do artigo">
+                <a href="artigos_notícias.html" target="_blank">
+                    <img src="Imagens/artigo 1_1.png" alt="capa do artigo">
+                </a>
+            
             </figure>
 
                 <h3>Relatório Mundial das Nações Unidas sobre o Desenvolvimento da Água 2025</h3>
@@ -84,7 +87,9 @@
             <article>
 
             <figure>
-            <img src="Imagens/artigo 2.png" alt="capa do artigo">
+                <a href="artigos_notícias.html" target="_blank">
+                    <img src="Imagens/artigo 2.png" alt="capa do artigo">
+                </a>
             </figure>
 
                 <h3>Progresso no acesso à água potável, saneamento e higiene domiciliar entre 2000 e 2024: foco especial nas desigualdades.</h3>
