--- a/artigos_notícias.html
+++ b/artigos_notícias.html
@@ -52,34 +52,34 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="Imagens/Notícias_1.jpg" class="d-block w-100" alt="Água">
+      <img src="Imagens/Notícias_1.jpg" class="d-block w-100" alt="Exposição sobre Água">
       <div class="carousel-caption d-none d-md-block">
         <h5>Exposição “Água”, de Érico Hiller, apresenta um retrato da crise hídrica mundial</h5>
         <p>As imagens documentam a rotina de comunidades que acordam antes do sol para buscar água</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="Imagens/Notícias_2.jpg" class="d-block w-100" alt="...">
+      <img src="Imagens/Notícias_2 (1).jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>A startup de ganhador do Prêmio Nobel que transforma ar em água</h5>
         <p>Filho de refugiados palestinos de Gaza, Omar Yaghi ganhou o Prêmio Nobel de Química em 2025 e pode solucionar a escassez de água no mundo</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="Imagens/Notícias_3.jpg" class="d-block w-100" alt="...">
+      <img src="Imagens/Notícia_3.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <h5>Calendário Ambiental</h5>
+        <p> O calendário destaca momentos-chave para reflexão, mobilização e ação coletiva</p>
       </div>
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-target="#carouselExampleCaptions" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
+    <span class="sr-only">Anterior</span>
   </button>
   <button class="carousel-control-next" type="button" data-target="#carouselExampleCaptions" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
+    <span class="sr-only">Próximo</span>
   </button>
 </div>
 
@@ -159,14 +159,14 @@
                 </article>
 
                 <article class="noticia-item">
-                    <img src="Imagens/Notícias_2.jpg" alt="Nobel da Água">
+                    <img src="Imagens/Notícias_2 (1).jpg" alt="Nobel da Água">
                     <h4>Ganhador do Prêmio Nobel que transforma ar em água</h4>
                     <p> O professor Omar Yaghi ganhou o Prêmio Nobel de Química de 2025 por uma descoberta científica que sua startup está agora prestes a comercializar. A tecnologia da empresa colhe água da atmosfera</p>
                     <a class="botao" href="https://www.infomoney.com.br/business/a-startup-de-ganhador-do-premio-nobel-que-transforma-agua-em-ar/" target="_blank">Leia mais</a>
                 </article>
 
                 <article class="noticia-item">
-                    <img src="Imagens/Notícias_3.jpg" alt="Calendário Ecológico">
+                    <img src="Imagens/Notícia_3.jpg" alt="Calendário Ecológico">
                     <h4>Calendário Ambiental Anual</h4>
                     <p>Com a crescente preocupação em torno das mudanças climáticas e da preservação dos recursos naturais, iniciativas que reforçam a consciência ecológica ganham ainda mais importância. Confira as principais datas de 2026.</p>
                     <a class="botao" href="https://www2.uepg.br/pauta-ambiental/calendario-ambiental-anual/" target="_blank">Leia mais</a>
