atualização Pedro Fernanda

--- a/artigos_notícias.html
+++ b/artigos_notícias.html
@@ -26,10 +26,10 @@
 
         <nav>
             <ul>
-                <li><a href="pagina_inicial.html">Pagina Inicial</a></li>
+                <li><a href="pagina_inicial.html">Página Inicial</a></li>
                 <li><a href="consumo.html">Consumo</a></li>
                 <li><a href="artigos_notícias.html">Artigos e Notícias</a></li>
-                <li><a href="#">Iniciativas</a></li>
+                <li><a href="iniciativas.html">Iniciativas</a></li>
                 <li><a href="#">Galeria</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
