Atualização final total

--- a/iniciativas.html
+++ b/iniciativas.html
@@ -24,8 +24,8 @@
                 <li><a href="consumo.html">Consumo</a></li>
                 <li><a href="artigos_notícias.html">Artigos e Notícias</a></li>
                 <li><a href="iniciativas.html">Iniciativas</a></li>
-                <li><a href="#">Galeria</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="galeria.html">Galeria</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
