Atualização_final_Total

--- a/artigos_notícias.html
+++ b/artigos_notícias.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
     <meta charset="utf-8">
     <title>Artigos e Noticias</title>
@@ -59,7 +59,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="Imagens/Notícias_2 (1).jpg" class="d-block w-100" alt="...">
+      <img src="Imagens/Notícias_2(1).jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>A startup de ganhador do Prêmio Nobel que transforma ar em água</h5>
         <p>Filho de refugiados palestinos de Gaza, Omar Yaghi ganhou o Prêmio Nobel de Química em 2025 e pode solucionar a escassez de água no mundo</p>
@@ -91,7 +91,7 @@
             <!-- ARTIGO 01 -->
             <article class="artigo-item">
                 <figure>
-                    <img src="Imagens/artigo 1_1.png" alt="Capa artigo 1">
+                    <img src="Imagens/artigo1_1.png" alt="Capa artigo 1">
                 </figure>
 
                 <div class="texto-artigo">
@@ -121,7 +121,7 @@
             <!-- ARTIGO 02 -->
             <article class="artigo-item">
                 <figure>
-                    <img src="Imagens/artigo 2.png" alt="Capa artigo 2">
+                    <img src="Imagens/artigo2.png" alt="Capa artigo 2">
                 </figure>
 
                 <div class="texto-artigo">
@@ -144,6 +144,7 @@
                     <a class="botao" href="https://www.who.int/publications/m/item/progress-on-household-drinking-water--sanitation-and-hygiene-2000-2024--special-focus-on-inequalities">Baixe o artigo</a>
                 </div>
             </article>
+        </section>    
 
         <!--Notícias-->
         <section class="noticias-secao">
@@ -159,7 +160,7 @@
                 </article>
 
                 <article class="noticia-item">
-                    <img src="Imagens/Notícias_2 (1).jpg" alt="Nobel da Água">
+                    <img src="Imagens/Notícias_2(1).jpg" alt="Nobel da Água">
                     <h4>Ganhador do Prêmio Nobel que transforma ar em água</h4>
                     <p> O professor Omar Yaghi ganhou o Prêmio Nobel de Química de 2025 por uma descoberta científica que sua startup está agora prestes a comercializar. A tecnologia da empresa colhe água da atmosfera</p>
                     <a class="botao" href="https://www.infomoney.com.br/business/a-startup-de-ganhador-do-premio-nobel-que-transforma-agua-em-ar/" target="_blank">Leia mais</a>
