--- a/pagina_inicial.html
+++ b/pagina_inicial.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
     <meta charset="utf-8">
     <title>Dia Mundial da Água</title>
@@ -36,7 +36,7 @@
     <section class="destaque">
         <figure>
             <!-- imagem -->
-            <img src="Imagens/imagem destaque.png" alt="Imagem agua">
+            <img src="Imagens/imagemdestaque.png" alt="Imagem agua">
         </figure>
         <p> O Dia Mundial da Água, celebrado em 22 de março desde 1993, é uma data oficial das Nações Unidas dedicada a destacar a importância vital da água doce para a vida no planeta. Além de celebrar esse recurso essencial, a data chama atenção para os 2,1 bilhões de pessoas que ainda vivem sem acesso à água potável e lembra a urgência de enfrentar a crise global da água. É um momento para refletir, conscientizar e incentivar ações que promovam o uso responsável, a preservação e o acesso universal à água de qualidade.</p>
     </section>
@@ -49,7 +49,6 @@
                 <h2>Consumo Consciente</h2>
                 <p>
                     O consumo consciente de água é a prática de usar a água racionalmente, sem desperdiçar ou contaminar esse recurso vital. Isso implica em mudar os nossos hábitos de consumo da água para assegurar a sua sustentabilidade para as gerações futuras. Confira algumas dicas para economizar água no dia a dia.
-                </p>
                 </p>
             </article>
 
@@ -73,7 +72,7 @@
 
             <figure>
                 <a href="artigos_notícias.html" target="_blank">
-                    <img src="Imagens/artigo 1_1.png" alt="capa do artigo">
+                    <img src="Imagens/artigo1_1.png" alt="capa do artigo">
                 </a>
             
             </figure>
@@ -88,7 +87,7 @@
 
             <figure>
                 <a href="artigos_notícias.html" target="_blank">
-                    <img src="Imagens/artigo 2.png" alt="capa do artigo">
+                    <img src="Imagens/artigo2.png" alt="capa do artigo">
                 </a>
             </figure>
 
