--- a/iniciativas.html
+++ b/iniciativas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
     <meta charset="utf-8">
     <title>Dia Mundial da Água</title>
@@ -28,7 +28,7 @@
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
-    </header>
+    </header>   
 
     <section class="destaque">
         <figure>
@@ -174,6 +174,7 @@
     </div>
 
 </section>
+</div>
 </main>
 
     <footer>
